# Performance-Guard

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  index.html  latest 1.0.1.json  latest.json  package-lock.json  package.json  splashscreen.html  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
scripts/: generate-icon.js
src/: App.tsx  index.css  splash.css  splash.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: tauri.ts
src/components/auth/: LoginModal.tsx
src/components/common/: AnimatedContainer.tsx  AppIcon.tsx  Button.tsx  Modal.tsx  Pagination.tsx  ProgressBar.tsx  SearchInput.tsx  Select.tsx  SortableHeader.tsx  StatCard.tsx  TabButton.tsx  UpdateNotification.tsx  index.ts
src/components/dashboard/: AppList.tsx  AppRow.tsx  SystemStats.tsx  index.ts
src/components/details/: AppSelector.tsx  PerformanceChart.tsx  SessionList.tsx  SessionStats.tsx  index.ts
src/components/layout/: Header.tsx
src/components/splash/: AuroraRing.tsx  LightningBolt.tsx  ShieldIcon.tsx  SplashApp.tsx  SplashScreen.tsx  index.ts  useLoadingProgress.ts
src/components/whitelist/: ProcessList.tsx  index.ts  (+2 more)
src/config/: firebase.ts
src/context/: AuthContext.tsx
src/contexts/: PlatformContext.tsx
src/hooks/: useAppUpdater.ts  useCountUp.ts  useFirestoreSync.ts  usePlatform.ts
src/types/: auth.ts  index.ts
src/utils/: export.ts  formatters.ts
src/views/: DashboardView.tsx  DetailsView.tsx  SettingsView.tsx  WhitelistView.tsx  index.ts
(+5 files in other folders)
